added input methods to index.html

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,29 @@
 <body>
     <main>
         <section id="form-group">
-            
+            <div class="form-input">
+                <label for="user" class="username-label">Username</label>
+                <input id="user" type="text" class="input">
+            </div>
+            <div class="form-input">
+                <label for="email" class="email-label">Email</label>
+                <input id="email" type="text" class="input">
+            </div>
+            <div class="form-input">
+                <label for="date">Date Of Birth</label>
+                <input type="date" name="dateofbirth" class="input">
+            </div>
+            <div class="form-input">
+                <input type="radio" value="None" id="male" name="gender" checked/>
+                <label for="male" class="input">Male</label>
+                <input type="radio" value="None" id="female" name="gender" />
+                <label for="female" class="input">Female</label>
+            </div>
+            <div class="form-input">
+                <input type="checkbox" id="terms">
+                <label for="terms" class="input">I accept the Terms & Conditions</label>
+            </div>
+
         </section>
     </main>
 </body>
