--- a/Index.html
+++ b/Index.html
@@ -1,39 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Creat new Accout</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <section id="form-group">
-            <div class="form-input">
-                <label for="user" class="username-label">Username</label>
-                <input id="user" type="text" class="input">
-            </div>
-            <div class="form-input">
-                <label for="email" class="email-label">Email</label>
-                <input id="email" type="text" class="input">
-            </div>
-            <div class="form-input">
-                <label for="date">Date Of Birth</label>
-                <input type="date" name="dateofbirth" class="input">
-            </div>
-            <div class="form-input">
-                <input type="radio" value="None" id="male" name="gender" checked/>
+      <section>
+        <div id="form-group">
+          <div class="form-input">
+            <label for="user" class="username-label">Username</label>
+            <input id="user" type="text" class="input" />
+          </div>
+          <div class="form-input">
+            <label for="email" class="email-label">Email</label>
+            <input id="email" type="text" class="input" />
+          </div>
+          <div class="form-input">
+            <label for="date">Date Of Birth</label>
+            <input type="date" name="dateofbirth" class="input" />
+          </div>
+          <div class="form-input">
+            <div><label for="male" class="input">Gender</label></div>
+            <div class="gender-select">
+              <div>
+                <input
+                  type="radio"
+                  value="None"
+                  id="male"
+                  name="gender"
+                  checked
+                />
                 <label for="male" class="input">Male</label>
+              </div>
+              <div>
                 <input type="radio" value="None" id="female" name="gender" />
                 <label for="female" class="input">Female</label>
+              </div>
             </div>
-            <div class="form-input">
-                <input type="checkbox" id="terms">
-                <label for="terms" class="input">I accept the Terms & Conditions</label>
+          </div>
+          <div class="form-input">
+            <div>
+              <input type="checkbox" id="terms" />
+              <label for="terms" class="input"
+                >I accept the Terms & Conditions</label
+              >
             </div>
-
-        </section>
+          </div>
+        </div>
+        <div class="submit-btn">
+          <div>
+            <button class="create-acc-btn">
+              <input type="submit" value="Creat Account" />
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
