changed terms and conditions text.

--- a/Index.html
+++ b/Index.html
@@ -56,7 +56,7 @@
             <div>
               <input type="checkbox" id="terms" required />
               <label for="terms" class="input"
-                >I accept the Terms & Conditions</label
+                >I accept the Terms & Conditions.</label
               >
             </div>
           </div>
