changed "div" to Form" for class="form-group", unified scss input styles(text email and date), changed email input form "text" to "email"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <main>
       <section id="form-wraper">
-        <div class="form-group">
+        <form action="" class="form-group">
           <div class="form-input">
             <label for="user" class="username-label">Full Name</label>
             <input id="user" type="text" class="input" required />
@@ -60,7 +60,7 @@
               >
             </div>
           </div>
-        </div>
+        </form>
         <div class="submit-btn">
           <div>
             <button class="create-acc-btn">
