--- a/index.html
+++ b/index.html
@@ -20,18 +20,30 @@
         <form action="" class="form-group">
           <div class="form-input">
             <label for="user" class="username-label">Full Name</label>
-            <input id="user" type="text" class="input" required />
+            <input id="user" type="text" class="input" tabindex="1" required />
           </div>
           <div class="form-input">
             <label for="email" class="email-label"
               >Email
               <address></address
             ></label>
-            <input id="email" type="text" class="input" required />
+            <input
+              id="email"
+              type="email"
+              class="input"
+              tabindex="2"
+              required
+            />
           </div>
           <div class="form-input">
             <label for="date">Date Of Birth</label>
-            <input type="date" name="dateofbirth" class="input" required />
+            <input
+              type="date"
+              name="dateofbirth"
+              class="input"
+              tabindex="3"
+              required
+            />
           </div>
           <div class="form-input">
             <div><label for="male" class="input">Gender</label></div>
@@ -42,19 +54,25 @@
                   value="None"
                   id="male"
                   name="gender"
-                  checked
+                  tabindex="4"
                 />
                 <label for="male" class="input">Male</label>
               </div>
               <div>
-                <input type="radio" value="None" id="female" name="gender" />
+                <input
+                  type="radio"
+                  value="None"
+                  id="female"
+                  name="gender"
+                  tabindex="5"
+                />
                 <label for="female" class="input">Female</label>
               </div>
             </div>
           </div>
           <div class="form-input">
             <div>
-              <input type="checkbox" id="terms" required />
+              <input type="checkbox" id="terms" tabindex="6" required />
               <label for="terms" class="input"
                 >I accept the Terms & Conditions.</label
               >
@@ -63,7 +81,7 @@
         </form>
         <div class="submit-btn">
           <div>
-            <button class="create-acc-btn">
+            <button class="create-acc-btn" tabindex="7">
               <input type="submit" value="Creat Account" />
             </button>
           </div>
