fixed "creat-account" button problem with flexbox. changed "div" for "class="form-input" to fieldset.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <main>
       <section id="form-wraper">
         <form action="" class="form-group">
-          <div class="form-input">
+          <fieldset class="form-input">
             <label for="user" class="username-label">Full Name</label>
             <input id="user" type="text" class="input" tabindex="1" required />
-          </div>
-          <div class="form-input">
+          </fieldset>
+          <fieldset class="form-input">
             <label for="email" class="email-label"
               >Email
               <address></address
@@ -34,8 +34,8 @@
               tabindex="2"
               required
             />
-          </div>
-          <div class="form-input">
+          </fieldset>
+          <fieldset class="form-input">
             <label for="date">Date Of Birth</label>
             <input
               type="date"
@@ -44,8 +44,8 @@
               tabindex="3"
               required
             />
-          </div>
-          <div class="form-input">
+          </fieldset>
+          <fieldset class="form-input">
             <div><label for="male" class="input">Gender</label></div>
             <div class="gender-select">
               <div>
@@ -69,23 +69,23 @@
                 <label for="female" class="input">Female</label>
               </div>
             </div>
-          </div>
-          <div class="form-input">
+          </fieldset>
+          <fieldset class="form-input">
             <div>
               <input type="checkbox" id="terms" tabindex="6" required />
               <label for="terms" class="input"
                 >I accept the Terms & Conditions.</label
               >
             </div>
-          </div>
+          </fieldset>
+          <fieldset class="submit-btn">
+            <div>
+              <button class="create-acc-btn" tabindex="7">
+                <input type="submit" value="Creat Account" />
+              </button>
+            </div>
+          </fieldset>
         </form>
-        <div class="submit-btn">
-          <div>
-            <button class="create-acc-btn" tabindex="7">
-              <input type="submit" value="Creat Account" />
-            </button>
-          </div>
-        </div>
       </section>
     </main>
   </body>
