added  "Text indent"  to form inputs

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   id="male"
                   name="gender"
                   tabindex="4"
+                  required
                 />
                 <label for="male" class="input">Male</label>
               </div>
