used backup for deleted repo

--- a/index.html
+++ b/index.html
@@ -89,5 +89,22 @@
         </form>
       </section>
     </main>
+    <div class="dark-mode-switch">
+      <div>
+        <input
+          type="checkbox"
+          name="checkbox1"
+          id="checkbox3"
+          class="ios-toggle"
+          onclick="document.documentElement.classList.toggle('dark-mode')"
+        />
+        <label
+          for="checkbox3"
+          class="checkbox-label"
+          data-off="Dark-Mode Off"
+          data-on=" &nbsp On"
+        ></label>
+      </div>
+    </div>
   </body>
 </html>
